// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionCategoriesService should return a transaction category by id 1`] = `
{
  "deleted": false,
  "id": "623b58ada3deba9879422fbf",
  "name": "Category for all types",
  "parentCategoryId": null,
  "userId": "61460d7354ea082ad0256749",
  "visibility": [
    "INCOME",
    "EXPENSE",
    "TRANSFER",
  ],
}
`;

exports[`TransactionCategoriesService should return an array of transaction categories from findAllByUser 1`] = `
[
  {
    "deleted": false,
    "id": "623b58ada3deba9879422fbf",
    "name": "Category for all types",
    "parentCategoryId": null,
    "userId": "61460d7354ea082ad0256749",
    "visibility": [
      "INCOME",
      "EXPENSE",
      "TRANSFER",
    ],
  },
  {
    "deleted": false,
    "id": "623b58b8a3deba9879422fc2",
    "name": "Invisible category",
    "parentCategoryId": null,
    "userId": "61460d7354ea082ad0256749",
    "visibility": [],
  },
  {
    "deleted": false,
    "id": "623b58bfa3deba9879422fc5",
    "name": "Expense category",
    "parentCategoryId": null,
    "userId": "61460d7354ea082ad0256749",
    "visibility": [
      "EXPENSE",
    ],
  },
  {
    "deleted": false,
    "id": "623b58c5a3deba9879422fc8",
    "name": "Income category",
    "parentCategoryId": null,
    "userId": "61460d7354ea082ad0256749",
    "visibility": [
      "INCOME",
    ],
  },
  {
    "deleted": false,
    "id": "623b6b17a3deba9879422fcd",
    "name": "Transfer category",
    "parentCategoryId": null,
    "userId": "61460d7354ea082ad0256749",
    "visibility": [
      "TRANSFER",
    ],
  },
  {
    "deleted": false,
    "id": "623b6b36a3deba9879422fd1",
    "name": "Transfer sub category",
    "parentCategoryId": "623b58b8a3deba9879422fc2",
    "userId": "61460d7354ea082ad0256749",
    "visibility": [
      "TRANSFER",
    ],
  },
  {
    "deleted": false,
    "id": "623b6b51a3deba9879422fd5",
    "name": "Income sub category",
    "parentCategoryId": "623b58b8a3deba9879422fc2",
    "userId": "61460d7354ea082ad0256749",
    "visibility": [
      "INCOME",
    ],
  },
  {
    "deleted": false,
    "id": "623b6b64a3deba9879422fd9",
    "name": "Expense sub category",
    "parentCategoryId": "623b58b8a3deba9879422fc2",
    "userId": "61460d7354ea082ad0256749",
    "visibility": [
      "EXPENSE",
    ],
  },
  {
    "deleted": false,
    "id": "623b6b84a3deba9879422fdd",
    "name": "Invisble sub category",
    "parentCategoryId": "623b58ada3deba9879422fbf",
    "userId": "61460d7354ea082ad0256749",
    "visibility": [],
  },
  {
    "deleted": false,
    "id": "623b6b91a3deba9879422fe1",
    "name": "Sub category for all types",
    "parentCategoryId": "623b58b8a3deba9879422fc2",
    "userId": "61460d7354ea082ad0256749",
    "visibility": [
      "INCOME",
      "EXPENSE",
      "TRANSFER",
    ],
  },
]
`;

exports[`TransactionCategoriesService should return an array of transaction categories from findMonthlySummariesByUserAndId 1`] = `
[
  CategoryMonthlySummaryDto {
    "expenseAmount": "1135.98",
    "expensesCount": 2,
    "id": {
      "month": 1,
      "year": 2022,
    },
    "incomeAmount": "2271.53",
    "incomesCount": 2,
    "totalAmount": "1135.55",
    "totalCount": 4,
    "transferAmount": "0",
    "transfersCount": 0,
  },
]
`;
